--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
 @use 'sass:math';
-@import "./index_pg.scss";
-@import "./reset.scss";
-@import "./variables.scss";
+@import "./index_pg";
+@import "./reset";
+@import "./variables";
