--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,7 @@
+$font_primary: "DM Sans",
+Arial,
+Helvetica,
+sans-serif;
 $color_primary_bg: #901C1C;
 $font_color_primary_bg: #FFFFFF;
 $font_color_primary: #D3573C;
@@ -5,3 +9,4 @@ $color-secondary_bg:#DB8876;
 $color-secondary_bg_1:#FAFAFA;
 $font_color-secondary_1: #525252;
 $font_color-secondary_2: #901C1C;
+$modal_duration: 0.8s;
