--- a/sass/_photographer_page.scss
+++ b/sass/_photographer_page.scss
@@ -35,9 +35,14 @@ body {
 .btn {
     width: 170px;
     height: fit-content;
-    min-height: 69px;
+    min-height: 45px;
     background: $color_primary_bg;
     color: $font_color_primary_bg;
+    border-radius: 10px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    font-weight: bold;
     .display_none {
         display: none;
     }
@@ -105,4 +110,40 @@ section.photographe_perso {
 
 ul.sort_media {
     z-index: 10;
+}
+
+.wrapper_media {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    justify-content: space-evenly;
+}
+
+article.media {
+    width: 350px;
+    height: 300px;
+    overflow: hidden;
+    position: relative;
+    border-radius: 5%;
+    margin: 45px;
+    a.media {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        min-width: fit-content;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 40px;
+    }
+    img,
+    video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin-bottom: 10px;
+    }
 }
