func for define a type of screen

--- a/sass/_photographer_page.scss
+++ b/sass/_photographer_page.scss
@@ -147,3 +147,12 @@ article.media {
         margin-bottom: 10px;
     }
 }
+
+body._touch {
+    .wrapper_media {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        justify-content: space-evenly;
+    }
+}
