--- a/sass/_photographer_page.scss
+++ b/sass/_photographer_page.scss
@@ -56,7 +56,6 @@ section.photographe_perso {
     grid-template-areas: "a b c";
     grid-template-columns: 1.2fr 1fr 1fr;
     justify-items: start;
-    align-items: center;
     background: $color-secondary_bg_1;
     padding: 2rem;
     position: relative;
@@ -108,6 +107,17 @@ section.photographe_perso {
     }
 }
 
+.menu_sortBy {
+    display: flex;
+    margin-top: 1vh;
+    margin-bottom: 2vh;
+    h2 {
+        margin-right: 1rem;
+        font-weight: bold;
+        font-size: 1.5vh;
+    }
+}
+
 ul.sort_media {
     z-index: 10;
 }
@@ -121,34 +131,47 @@ ul.sort_media {
 
 article.media {
     width: 350px;
-    height: 300px;
-    overflow: hidden;
-    position: relative;
-    border-radius: 5%;
-    margin: 45px;
+    height: 350px;
+    margin-bottom: 2vh;
     a.media {
         display: flex;
         flex-direction: column;
-        width: 100%;
-        min-width: fit-content;
         justify-content: center;
         align-items: center;
         margin-bottom: 40px;
     }
-    img,
-    video {
+    .media_content {
+        width: 350px;
+        height: 300px;
+        overflow: hidden;
+        position: relative;
+        border-radius: 5%;
+        min-width: fit-content;
+        img,
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            margin-bottom: 10px;
+        }
+    }
+    .description {
+        z-index: 2;
+        color: $font_color-secondary_2;
+        font-weight: 400;
+        font-size: 2vh;
         width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-        position: absolute;
-        top: 0;
-        left: 0;
-        margin-bottom: 10px;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 1vh;
     }
 }
 
-body._touch {
+@media #{$mobile-only} {
     .wrapper_media {
         display: grid;
         grid-template-columns: 1fr;
