--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @use 'sass:math';
 @import "./reset";
 @import "./variables";
+@import "./responsive";
 @import "./mixins";
 @import "./index_pg";
 @import "./photographer_page";
