--- a/sass/_photographer_page.scss
+++ b/sass/_photographer_page.scss
@@ -6,9 +6,14 @@ body {
     }
 }
 
+.fas {
+    width: 10px;
+    height: 10px;
+}
+
 .rating_price_likes {
     position: fixed;
-    z-index: 10;
+    z-index: 2;
     bottom: 0px;
     right: 50px;
     width: 20vw;
@@ -91,6 +96,7 @@ section.photographe_perso {
         border-radius: 10px;
         align-self: start;
         margin-top: 25px;
+        cursor: pointer;
     }
     .parent_img_perso {
         grid-area: c;
@@ -198,7 +204,6 @@ article.media {
         }
     }
     .description {
-        z-index: 2;
         color: $font_color-secondary_2;
         font-weight: 400;
         font-size: 2vh;
@@ -215,5 +220,194 @@ article.media {
         grid-template-columns: 1fr;
         justify-items: center;
         justify-content: space-evenly;
+        article.media {
+            height: 210px;
+            .media_content {
+                width: 335px;
+                height: 190px;
+            }
+        }
     }
+}
+
+//page modal
+.bground {
+    display: none;
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(196, 196, 196, 0.4);
+}
+
+.content {
+    margin: 10% auto;
+    width: 100%;
+    max-width: 500px;
+    animation-name: modalopen;
+    animation-duration: var(--modal-duration);
+    background: #DB8876;
+    opacity: 1;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    color: black;
+    padding-top: 10px;
+    @media #{$mobile-only} {
+        margin: unset;
+        height: 100%;
+    }
+}
+
+.modal-body {
+    padding: 15px 8%;
+    margin: 150px auto;
+}
+
+label {
+    font-family: var(--font-default);
+    font-size: 17px;
+    font-weight: normal;
+    display: inline-block;
+    margin-bottom: 11px;
+}
+
+input {
+    padding: 8px;
+    border: 0.8px solid #ccc;
+    outline: none;
+}
+
+.text-control {
+    margin: 0;
+    padding: 8px;
+    width: 100%;
+    border-radius: 8px;
+    font-size: 20px;
+    height: 48px;
+}
+
+.formData[data-error]::after {
+    content: attr(data-error);
+    font-size: 0.4em;
+    color: #e54858;
+    display: block;
+    margin-top: 7px;
+    margin-bottom: 7px;
+    text-align: right;
+    line-height: 0.3;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.formData[data-error-visible="true"]::after {
+    opacity: 1;
+}
+
+.formData[data-error-visible="true"] .text-control {
+    border: 2px solid #e54858;
+}
+
+.checkbox-label,
+.checkbox2-label {
+    position: relative;
+    margin-left: 36px;
+    font-size: 12px;
+    font-weight: normal;
+}
+
+.checkbox-label .checkbox-icon,
+.checkbox2-label .checkbox-icon {
+    display: block;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #279e7a;
+    border-radius: 50%;
+    text-indent: 29px;
+    white-space: nowrap;
+    position: absolute;
+    left: -30px;
+    top: -1px;
+    transition: 0.3s;
+}
+
+.checkbox-label .checkbox-icon::after,
+.checkbox2-label .checkbox-icon::after {
+    content: "";
+    width: 13px;
+    height: 13px;
+    background-color: #279e7a;
+    border-radius: 50%;
+    text-indent: 29px;
+    white-space: nowrap;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.3s;
+    opacity: 0;
+}
+
+.checkbox-input {
+    display: none;
+}
+
+.checkbox-input:checked+.checkbox-label .checkbox-icon::after,
+.checkbox-input:checked+.checkbox2-label .checkbox-icon::after {
+    opacity: 1;
+}
+
+.checkbox-input:checked+.checkbox2-label .checkbox-icon {
+    background: #279e7a;
+}
+
+.checkbox2-label .checkbox-icon {
+    border-radius: 4px;
+    border: 0;
+    background: #c4c4c4;
+}
+
+.checkbox2-label .checkbox-icon::after {
+    width: 7px;
+    height: 4px;
+    border-radius: 2px;
+    background: transparent;
+    border: 2px solid transparent;
+    border-bottom-color: #fff;
+    border-left-color: #fff;
+    transform: rotate(-55deg);
+    left: 21%;
+    top: 19%;
+}
+
+.close {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    width: 32px;
+    height: 32px;
+    opacity: 1;
+    cursor: pointer;
+    transform: scale(0.7);
+}
+
+.close:before,
+.close:after {
+    position: absolute;
+    left: 15px;
+    content: " ";
+    height: 33px;
+    width: 3px;
+    background-color: #fff;
+}
+
+.close:before {
+    transform: rotate(45deg);
+}
+
+.close:after {
+    transform: rotate(-45deg);
 }
