--- a/sass/_photographer_page.scss
+++ b/sass/_photographer_page.scss
@@ -249,7 +249,7 @@ article.media {
     margin: 10% auto;
     width: 100%;
     max-width: 500px;
-    animation-name: modalopen;
+    // animation-name: modalopen;
     animation-duration: var(--modal-duration);
     background: #DB8876;
     opacity: 1;
@@ -412,7 +412,7 @@ input,
     position: absolute;
     left: 15px;
     content: " ";
-    height: 33px;
+    height: 45px;
     width: 3px;
     background-color: #fff;
 }
@@ -433,4 +433,108 @@ input.btn-submit {
     border-radius: 5px;
     border: none;
     margin-top: 15px;
+}
+
+.bgPhoto {
+    display: none;
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: #E5E5E5;
+    .close {
+        &::before,
+        &::after {
+            height: 50px;
+            width: 7px;
+            background-color: #901C1C;
+        }
+    }
+    .content {
+        max-width: unset;
+        // margin: 10% auto;
+        width: 100%;
+        height: 100%;
+        // animation-name: modalopen;
+        // animation-duration: var(--modal-duration);
+        background: #E5E5E5;
+        opacity: 1;
+        border-radius: 10px;
+        overflow: hidden;
+        position: relative;
+        color: black;
+        padding-top: 10px;
+    }
+    .slider {
+        display: flex;
+        height: 80%;
+        .slideLeft {
+            position: absolute;
+            top: 50%;
+            width: 32px;
+            height: 32px;
+            opacity: 1;
+            cursor: pointer;
+            transform: scale(0.7);
+            &::before,
+            &::after {
+                position: absolute;
+                left: 15px;
+                content: " ";
+                height: 33px;
+                width: 7px;
+                background-color: #901C1C;
+                transform: rotate(45deg);
+            }
+            &::after {
+                top: 21px;
+                transform: rotate(-45deg);
+            }
+        }
+        .slideRight {
+            position: absolute;
+            top: 50%;
+            right: 15px;
+            width: 32px;
+            height: 32px;
+            opacity: 1;
+            cursor: pointer;
+            transform: scale(0.7);
+            &::before,
+            &::after {
+                position: absolute;
+                left: 15px;
+                content: " ";
+                height: 33px;
+                width: 7px;
+                background-color: #901C1C;
+                transform: rotate(135deg);
+            }
+            &::after {
+                top: 21px;
+                transform: rotate(45deg);
+            }
+        }
+        .modal-bodyPhotoGallery {
+            overflow: hidden;
+            position: relative;
+            border-radius: 5px;
+            min-width: fit-content;
+            padding: unset;
+            video,
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+                // position: absolute;
+                // top: 0;
+                // left: 0;
+                // margin-bottom: 10 px;
+            }
+        }
+    }
 }
