modal page contact verification of content done

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,5 +3,8 @@
 @import "./variables";
 @import "./responsive";
 @import "./mixins";
+@import "./_menu_sortBy_photographer";
+@import "./modal_contactPage";
+@import "./modal_mediaPage";
 @import "./index_pg";
 @import "./photographer_page";
