adding keyboard's events + aria functions

--- a/sass/_modal_contactPage.scss
+++ b/sass/_modal_contactPage.scss
@@ -136,6 +136,15 @@ input.btn-submit {
     cursor: pointer;
 }
 
+.hidden {
+    height: 1px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: -10000px;
+    width: 1px;
+}
+
 @keyframes modalopen {
     from {
         opacity: 0;
