--- a/sass/_index_pg.scss
+++ b/sass/_index_pg.scss
@@ -104,14 +104,14 @@ main {
     .photographe {
         display: inline-block;
         width: 100%;
-        a {
+        a,
+        .text_for_phographer {
             display: flex;
             flex-direction: column;
             width: 100%;
             min-width: fit-content;
             justify-content: center;
             align-items: center;
-            margin-bottom: 40px;
         }
         .parent_img {
             border-radius: 50%;
@@ -136,6 +136,9 @@ main {
             font-weight: 400;
             color: $font_color_primary;
             margin-bottom: 15px;
+        }
+        .text_for_phographer {
+            margin-bottom: 40px;
         }
         .city {
             font-size: 1.2vh;
