--- a/sass/_modal_contactPage.scss
+++ b/sass/_modal_contactPage.scss
@@ -137,11 +137,13 @@ input.btn-submit {
 }
 
 .hidden {
+    border: 0;
+    clip: rect(0 0 0 0);
     height: 1px;
-    left: 0;
+    margin: -1px;
     overflow: hidden;
+    padding: 0;
     position: absolute;
-    top: -10000px;
     width: 1px;
 }
 
