--- a/sass/_photographer_page.scss
+++ b/sass/_photographer_page.scss
@@ -188,7 +188,7 @@ article.media {
         article.media {
             height: 210px;
             .media_content {
-                width: 335px;
+                // width: 335px;
                 height: 190px;
             }
         }
