--- a/sass/_index_pg.scss
+++ b/sass/_index_pg.scss
@@ -117,7 +117,7 @@ main {
         display: inline-block;
         width: 100%;
         a,
-        .text_for_phographer {
+        .text_for_photographer {
             display: flex;
             flex-direction: column;
             width: 100%;
@@ -149,7 +149,7 @@ main {
             color: $font_color_primary;
             margin-bottom: 15px;
         }
-        .text_for_phographer {
+        .text_for_photographer {
             margin-bottom: 40px;
         }
         .city {
