--- a/sass/_modal_mediaPage.scss
+++ b/sass/_modal_mediaPage.scss
@@ -18,25 +18,24 @@
         }
     }
     .content {
+        display: inline-flex;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
         max-width: unset;
-        // margin: 10% auto;
-        width: 100%;
-        height: 100%;
-        // animation-name: modalopen;
-        // animation-duration: var(--modal-duration);
+        width: 100vw;
+        height: 100vh;
         background: #E5E5E5;
         opacity: 1;
         border-radius: 10px;
         overflow: hidden;
         position: relative;
-        color: black;
+        color: #901C1C;
         padding-top: 10px;
         margin: 0 auto;
     }
     .slider {
         display: flex;
-        height: 80%;
-        margin-top: 10%;
         align-items: center;
         .slideLeft {
             position: relative;
@@ -86,14 +85,13 @@
         .modal-bodyPhotoGallery {
             overflow: hidden;
             position: relative;
-            border-radius: 5px;
+            margin: unset;
             padding: unset;
             video,
             img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
+                height: 90vh;
                 object-position: center;
+                border-radius: 5px;
             }
         }
     }
