correction keyboard's events

--- a/sass/_modal_mediaPage.scss
+++ b/sass/_modal_mediaPage.scss
@@ -89,7 +89,7 @@
             padding: unset;
             video,
             img {
-                height: 90vh;
+                max-height: 90vh;
                 object-position: center;
                 border-radius: 5px;
             }
