--- a/sass/_menu_sortBy_photographer.scss
+++ b/sass/_menu_sortBy_photographer.scss
@@ -1,11 +1,12 @@
 section.content_media {
-    position: relative;
+    //   position: relative;
 }
 
 .menu_sortBy {
     display: flex;
     margin-top: 1vh;
     margin-bottom: 2vh;
+    align-items: center;
     h2 {
         margin-right: 1rem;
         font-weight: bold;
@@ -22,18 +23,21 @@ section.content_media {
     }
 }
 
-.wrapper_sort {
+.wrapper_sort_block {
+    position: relative;
+    transform: translateY(-20px);
     z-index: 10;
-    position: absolute;
-    left: 80px;
+}
+
+.wrapper_sort {
+    display: flex;
     width: 170px;
     height: 50px;
     border-radius: 5px;
     box-shadow: 3px 3px 3px rgb(165, 164, 164);
-    overflow: hidden;
-    top: 0;
-    display: flex;
     flex-direction: column;
+    overflow: hidden;
+    position: absolute;
     ul {
         position: relative;
         margin: 0;
@@ -41,21 +45,22 @@ section.content_media {
         background: #901C1C;
         color: white;
         &:hover {
-            background: $color-secondary_bg;
-            color: black;
+            // background: $color-secondary_bg;
+            // color: black;
         }
         &:focus {
-            background: $color-secondary_bg;
-            color: black;
+            //    background: $color-secondary_bg;
+            //   color: black;
         }
     }
     li {
         text-align: center;
         height: 50px;
         cursor: pointer;
-        padding: 0 10px;
+        margin: 0 10px;
+        padding: 16px 0;
     }
-    li.sort_media_arrow {
+    li.sort_media {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -69,12 +74,15 @@ section.content_media {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        border-top: 1px solid white;
+        /*
         &::before {
             content: " ";
             border-top: .5px solid #fff;
             width: 100%;
             margin-bottom: 5px;
         }
+        */
     }
 }
 
